# @file
# 
# Simply descend to subdirectories
#
# @author Blasius Czink

ADD_DEFINITIONS(-DHAVE_COVISE)

if (NOT COVISE_USE_VIRVO)
   ADD_DEFINITIONS(-DWITHOUT_VIRVO)
endif()

if (NOT COVISE_BUILD_ONLY_FILE)
    ADD_SUBDIRECTORY(3rdparty)
endif()
ADD_SUBDIRECTORY(kernel)

if (NOT XERCESC_FOUND OR COVISE_BUILD_ONLY_FILE)
   return()
endif()

ADD_SUBDIRECTORY(tools)

IF(COVISE_BUILD_SYS)
  ADD_SUBDIRECTORY(sys)
ENDIF(COVISE_BUILD_SYS)
IF(COVISE_BUILD_MODULES)
  ADD_SUBDIRECTORY(module)
ENDIF(COVISE_BUILD_MODULES)
