# @file
# 
# Simply descend to subdirectories
#
# @author Blasius Czink

ADD_DEFINITIONS(-DHAVE_COVISE)

if (NOT COVISE_USE_VIRVO)
   ADD_DEFINITIONS(-DWITHOUT_VIRVO)
endif()

if (NOT COVISE_BUILD_ONLY_FILE)
    ADD_SUBDIRECTORY(3rdparty)
endif()
ADD_SUBDIRECTORY(kernel)

if (NOT XERCESC_FOUND OR COVISE_BUILD_ONLY_FILE)
   return()
endif()

IF (NOT COVISE_BUILD_ONLY_COVER_PREREQ)
   ADD_SUBDIRECTORY(tools)
ENDIF()

IF(COVISE_BUILD_SYS)
  ADD_SUBDIRECTORY(sys)
ENDIF(COVISE_BUILD_SYS)
IF(COVISE_BUILD_MODULES AND NOT COVISE_BUILD_ONLY_COVER_PREREQ)
  ADD_SUBDIRECTORY(module)
ENDIF(COVISE_BUILD_MODULES AND NOT COVISE_BUILD_ONLY_COVER_PREREQ)
