# @file
# 
# Simply descend to subdirectories
#
# @author Blasius Czink

ADD_DEFINITIONS(-DHAVE_COVISE)

if (NOT COVISE_USE_VIRVO)
   ADD_DEFINITIONS(-DWITHOUT_VIRVO)
endif()

if (NOT COVISE_BUILD_ONLY_FILE AND NOT COVISE_BUILD_ONLY_ODDLOT)
    ADD_SUBDIRECTORY(3rdparty)
endif()
ADD_SUBDIRECTORY(kernel)

if (NOT XERCESC_FOUND OR COVISE_BUILD_ONLY_FILE)
   return()
endif()

IF (NOT COVISE_BUILD_ONLY_COVER AND NOT COVISE_BUILD_ONLY_ODDLOT)
   ADD_SUBDIRECTORY(tools)
ENDIF()

IF(COVISE_BUILD_SYS AND NOT COVISE_BUILD_ONLY_ODDLOT)
  ADD_SUBDIRECTORY(sys)
ENDIF()
IF(COVISE_BUILD_MODULES AND NOT COVISE_BUILD_ONLY_COVER AND NOT COVISE_BUILD_ONLY_ODDLOT)
  ADD_SUBDIRECTORY(module)
ENDIF()

if (NOT COVISE_BUILD_ONLY_ODDLOT)
    if (COVISE_BUILD_COVER OR COVISE_BUILD_ONLY_COVER)
        add_subdirectory(OpenCOVER)
    endif()
    if (NOT COVISE_BUILD_ONLY_COVER)
        add_subdirectory(VIVE)
    endif()
endif()

if (COVISE_BUILD_ONLY_ODDLOT OR NOT COVISE_BUILD_ONLY_COVER)
    add_subdirectory(oddlot)
endif()
    
